--- a/vercel.json
+++ b/vercel.json
@@ -2,8 +2,5 @@
   "version": 2,
   "buildCommand": "next build",
   "installCommand": "npm install",
-  "framework": "nextjs",
-  "env": {
-    "TOGETHER_API_KEY": "@together_api_key"
-  }
+  "framework": "nextjs"
 }
